eda - theorizing how the groups are split it seems that the groups are split retroactively

--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -97,6 +97,10 @@ table(df$MBSUBSPECIES)
 ini <- df %>% 
   filter(time == 'B')
 table(ini$CMQUIT_GROUP_2)
+
+ini5 <- df %>%
+  filter(time == '2Y')
+table(ini5$CMQUIT_GROUP_2)
 ```
 
 
