this should be the final edit, removing mbspecies as input

--- a/postcorrection_validation.Rmd
+++ b/postcorrection_validation.Rmd
@@ -72,8 +72,8 @@ baseline_data <- baseline_data %>%
     CMQUIT_GROUP_2 = factor(CMQUIT_GROUP_2, levels = c("A", "B", "C")),
     SEX = factor(SEX),
     DMSMK = factor(DMSMK),
-    RFCTCAVI = factor(RFCTCAVI),
-    MBSPECIES = factor(MBSPECIES)
+    RFCTCAVI = factor(RFCTCAVI)
+    # , MBSPECIES = factor(MBSPECIES)
   ) %>%
   drop_na() 
 
